--- a/mp2.html
+++ b/mp2.html
@@ -201,346 +201,57 @@ d_party &lt;- function(state_arg) {
   party(state_arg, &quot;D&quot;) 
 }
 
+comparison &lt;- function(state_arg) {
+  partydata &lt;- party_by_state(state_arg) 
+  winner_party &lt;- partydata[1,]
+  dem &lt;- partydata %&gt;% subset(party == &quot;D&quot;)
+  rep &lt;- partydata %&gt;% subset(party == &quot;R&quot;)
+  partydata %&gt;% summarize(state = state_arg,
+                          total_votes = sum(general),
+                          winner = winner_party$party[1],
+                          dem_votes = dem$general[1],
+                          dem_ratio = dem_votes/total_votes,
+                          rep_votes = rep$general[1],
+                          rep_ratio = rep_votes/total_votes)
+}
+
+swing_states &lt;- function(state_arg) {
+  partydata &lt;- party_by_state(state_arg) 
+  winner_party &lt;- partydata[1,]
+  dem &lt;- partydata %&gt;% subset(party == &quot;D&quot;)
+  rep &lt;- partydata %&gt;% subset(party == &quot;R&quot;)
+  partydata %&gt;% summarize(state = state_arg,
+                          total_votes = sum(general),
+                          winner = winner_party$party[1],
+                          dem_votes = dem$general[1],
+                          rep_votes = rep$general[1],
+                          dem_vs_rep = dem_votes/rep_votes,
+                          swing = abs(dem_vs_rep-1))
+}
+
 states &lt;- house_elections %&gt;% 
   select(state) %&gt;%
   unique()
 
-lapply(states$state, d_party)</code></pre>
-<pre><code>## [[1]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    CA 0.6057429
-## 
-## [[2]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    AK 0.2871036
-## 
-## [[3]]
-## # A tibble: 1 x 2
-##   state    ratio
-##   &lt;chr&gt;    &lt;dbl&gt;
-## 1    AL 0.359862
-## 
-## [[4]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    AR 0.2935974
-## 
-## [[5]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    AS 0.5857296
-## 
-## [[6]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    AZ 0.4357369
-## 
-## [[7]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    CO 0.4408507
-## 
-## [[8]]
-## # A tibble: 1 x 2
-##   state      ratio
-##   &lt;chr&gt;      &lt;dbl&gt;
-## 1    CT 0.09962285
-## 
-## [[9]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    DC 0.9402238
-## 
-## [[10]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    DE 0.6440593
-## 
-## [[11]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    FL 0.4515055
-## 
-## [[12]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    GA 0.4077201
-## 
-## [[13]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    HI 0.6745129
-## 
-## [[14]]
-## # A tibble: 1 x 2
-##   state   ratio
-##   &lt;chr&gt;   &lt;dbl&gt;
-## 1    IA 0.50303
-## 
-## [[15]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    ID 0.3282841
-## 
-## [[16]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    IL 0.5424403
-## 
-## [[17]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    IN 0.4474031
-## 
-## [[18]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    KS 0.1848329
-## 
-## [[19]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    KY 0.3886645
-## 
-## [[20]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    LA 0.2105924
-## 
-## [[21]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    MA 0.7225376
-## 
-## [[22]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    MD 0.6364047
-## 
-## [[23]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    MI 0.4849907
-## 
-## [[24]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    MN 0.5559404
-## 
-## [[25]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    MO 0.4183864
-## 
-## [[26]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    MS 0.3405119
-## 
-## [[27]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    MT 0.4271876
-## 
-## [[28]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    NC 0.5060518
-## 
-## [[29]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    ND 0.4178849
-## 
-## [[30]]
-## # A tibble: 1 x 2
-##   state    ratio
-##   &lt;chr&gt;    &lt;dbl&gt;
-## 1    NE 0.357584
-## 
-## [[31]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    NH 0.4998768
-## 
-## [[32]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    NJ 0.5678817
-## 
-## [[33]]
-## # A tibble: 1 x 2
-##   state    ratio
-##   &lt;chr&gt;    &lt;dbl&gt;
-## 1    NV 0.465534
-## 
-## [[34]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    NY 0.6408427
-## 
-## [[35]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    OH 0.4693197
-## 
-## [[36]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    OK 0.3094601
-## 
-## [[37]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    OR 0.5567989
-## 
-## [[38]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    PA 0.4838464
-## 
-## [[39]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    RI 0.5445064
-## 
-## [[40]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    SC 0.4146094
-## 
-## [[41]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    SD 0.4255027
-## 
-## [[42]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    TN 0.3487925
-## 
-## [[43]]
-## # A tibble: 1 x 2
-##   state    ratio
-##   &lt;chr&gt;    &lt;dbl&gt;
-## 1    TX 0.384893
-## 
-## [[44]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    UT 0.3246671
-## 
-## [[45]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    VA 0.4837272
-## 
-## [[46]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    VI 0.6008978
-## 
-## [[47]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    WA 0.5507935
-## 
-## [[48]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    WI 0.5048322
-## 
-## [[49]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    WV 0.4008722
-## 
-## [[50]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    GU 0.6033272
-## 
-## [[51]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    ME 0.6166307
-## 
-## [[52]]
-## # A tibble: 1 x 2
-##   state ratio
-##   &lt;chr&gt; &lt;dbl&gt;
-## 1    MP    NA
-## 
-## [[53]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    NM 0.5663485
-## 
-## [[54]]
-## # A tibble: 1 x 2
-##   state ratio
-##   &lt;chr&gt; &lt;dbl&gt;
-## 1    PR    NA
-## 
-## [[55]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    VT 0.7201472
-## 
-## [[56]]
-## # A tibble: 1 x 2
-##   state     ratio
-##   &lt;chr&gt;     &lt;dbl&gt;
-## 1    WY 0.2386891</code></pre>
+swing_data &lt;- lapply(states$state, swing_states) %&gt;%
+  bind_rows() %&gt;%
+  filter(swing &lt; 0.1) %&gt;%
+  arrange(swing)
+
+swing_data</code></pre>
+<pre><code>## # A tibble: 10 x 7
+##    state total_votes winner dem_votes rep_votes dem_vs_rep       swing
+##    &lt;chr&gt;       &lt;int&gt;  &lt;chr&gt;     &lt;int&gt;     &lt;int&gt;      &lt;dbl&gt;       &lt;dbl&gt;
+##  1    PA     5556330      R   2688410   2710070  0.9920076 0.007992413
+##  2    NV      973742      R    453310    457239  0.9914071 0.008592880
+##  3    WI     2862367      D   1445015   1401995  1.0306848 0.030684846
+##  4    VA     3733561      R   1806025   1876761  0.9623095 0.037690468
+##  5    NC     4383656      D   2218357   2137167  1.0379895 0.037989544
+##  6    CO     2450839      R   1080454   1143796  0.9446212 0.055378756
+##  7    MI     4903744      D   2378270   2238540  1.0624201 0.062420149
+##  8    IA     1535469      D    772387    726505  1.0631544 0.063154417
+##  9    OH     5140315      R   2412451   2620251  0.9206946 0.079305380
+## 10    NH      682018      D    340925    311636  1.0939846 0.093984649</code></pre>
 </div>
 
 
